include README.md in build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: dockerfiles/dev.dockerfile
     volumes:
       - ./src:/src
+      - ./README.md:/src/README.md
 
   test37:
     build:
