--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          cp ../README.md ../LICENSE ./
           python -m pip install --upgrade pip setuptools
           ([[ "${{ matrix.python-version }}" == "3.7" ]] && pip install -e .[ci,cached-property]) || pip install -e .[ci]
       - name: Lint with flake8
